packages/dart_edge_rig/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_rig/dart_edge_rig.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Pointer<NativeRigPromptResult> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<NativeRigPromptResult> dart_edge_rig_agent_prompt_message(
  int agent_handle,
  ffi.Pointer<ffi.Char> message_json,
);

@ffi.Native<
  ffi.Pointer<NativeRigPromptResult> Function(
    ffi.Int64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<NativeRigStreamOptions>,
    NativeRigStreamCallback,
    ffi.Int64,
  )
>()
external ffi.Pointer<NativeRigPromptResult>
dart_edge_rig_agent_stream_prompt_message(
  int agent_handle,
  ffi.Pointer<ffi.Char> message_json,
  ffi.Pointer<NativeRigStreamOptions> options,
  NativeRigStreamCallback callback,
  int user_data,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>()
external void dart_edge_rig_cancel_stream(int stream_id);

@ffi.Native<
  ffi.Void Function(ffi.Int64, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>()
external void dart_edge_rig_complete_tool_call(
  int call_sequence,
  ffi.Pointer<ffi.Char> result,
  ffi.Pointer<ffi.Char> error,
);

@ffi.Native<
  ffi.Pointer<NativeRigHandleResult> Function(ffi.Pointer<NativeRigAgentConfig>)
>()
external ffi.Pointer<NativeRigHandleResult> dart_edge_rig_create_agent(
  ffi.Pointer<NativeRigAgentConfig> config,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_rig_dispose_handle(int handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeRigBytesResult>)>(isLeaf: true)
external void dart_edge_rig_free_bytes_result(
  ffi.Pointer<NativeRigBytesResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeRigHandleResult>)>(isLeaf: true)
external void dart_edge_rig_free_handle_result(
  ffi.Pointer<NativeRigHandleResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeRigPromptResult>)>(isLeaf: true)
external void dart_edge_rig_free_prompt_result(
  ffi.Pointer<NativeRigPromptResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeRigStreamEvent>)>()
external void dart_edge_rig_free_stream_event(
  ffi.Pointer<NativeRigStreamEvent> value,
);

@ffi.Native<
  ffi.Pointer<NativeRigBytesResult> Function(
    ffi.Pointer<NativeRigModelConfig>,
    ffi.Pointer<NativeRigImageGenerationRequest>,
  )
>()
external ffi.Pointer<NativeRigBytesResult> dart_edge_rig_generate_image(
  ffi.Pointer<NativeRigModelConfig> config,
  ffi.Pointer<NativeRigImageGenerationRequest> request,
);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_rig_native_abi_version();

@ffi.Native<
  ffi.Pointer<NativeRigPromptResult> Function(
    ffi.Pointer<NativeRigModelConfig>,
    ffi.Pointer<NativeRigTranscriptionRequest>,
  )
>()
external ffi.Pointer<NativeRigPromptResult> dart_edge_rig_transcribe(
  ffi.Pointer<NativeRigModelConfig> config,
  ffi.Pointer<NativeRigTranscriptionRequest> request,
);

final class NativeRigAgentConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> provider;

  external ffi.Pointer<ffi.Char> api;

  external ffi.Pointer<ffi.Char> model;

  external ffi.Pointer<ffi.Char> api_key;

  external ffi.Pointer<ffi.Char> base_url;

  external ffi.Pointer<ffi.Char> preamble;

  external ffi.Pointer<ffi.Char> name;

  @ffi.Bool()
  external bool has_temperature;

  @ffi.Double()
  external double temperature;

  @ffi.Bool()
  external bool has_max_tokens;

  @ffi.Uint64()
  external int max_tokens;

  @ffi.IntPtr()
  external int max_turns;

  external ffi.Pointer<ffi.Char> output_schema_json;

  external ffi.Pointer<ffi.Char> additional_params_json;

  external ffi.Pointer<NativeRigToolDefinition> tools;

  @ffi.IntPtr()
  external int tools_len;

  external ffi.Pointer<NativeRigStringPair> headers;

  @ffi.IntPtr()
  external int headers_len;
}

final class NativeRigBytesResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.IntPtr()
  external int data_len;

  external ffi.Pointer<ffi.Char> error;
}

final class NativeRigHandleResult extends ffi.Struct {
  @ffi.Int64()
  external int handle;

  external ffi.Pointer<ffi.Char> name;

  external ffi.Pointer<ffi.Char> error;
}

final class NativeRigImageGenerationRequest extends ffi.Struct {
  external ffi.Pointer<ffi.Char> prompt;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  external ffi.Pointer<ffi.Char> additional_params_json;
}

final class NativeRigModelConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> provider;

  external ffi.Pointer<ffi.Char> model;

  external ffi.Pointer<ffi.Char> api_key;

  external ffi.Pointer<ffi.Char> base_url;

  external ffi.Pointer<ffi.Char> additional_params_json;
}

final class NativeRigPromptResult extends ffi.Struct {
  external ffi.Pointer<ffi.Char> output;

  external ffi.Pointer<ffi.Char> error;
}

typedef NativeRigStreamCallback =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Int64 user_data,
          ffi.Pointer<NativeRigStreamEvent> event,
        )
      >
    >;

final class NativeRigStreamEvent extends ffi.Struct {
  @ffi.Int32()
  external int kind;

  @ffi.Int64()
  external int call_sequence;

  external ffi.Pointer<ffi.Char> text;

  external ffi.Pointer<ffi.Char> id;

  external ffi.Pointer<ffi.Char> internal_call_id;

  external ffi.Pointer<ffi.Char> name;

  external ffi.Pointer<ffi.Char> arguments_json;

  external ffi.Pointer<ffi.Char> usage_json;
}

final class NativeRigStreamOptions extends ffi.Struct {
  @ffi.IntPtr()
  external int max_turns;
}

final class NativeRigStringPair extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  external ffi.Pointer<ffi.Char> value;
}

final class NativeRigToolDefinition extends ffi.Struct {
  external ffi.Pointer<ffi.Char> name;

  external ffi.Pointer<ffi.Char> description;

  external ffi.Pointer<ffi.Char> parameters_json;
}

final class NativeRigTranscriptionRequest extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.IntPtr()
  external int data_len;

  external ffi.Pointer<ffi.Char> filename;

  external ffi.Pointer<ffi.Char> language;

  external ffi.Pointer<ffi.Char> prompt;

  @ffi.Bool()
  external bool has_temperature;

  @ffi.Double()
  external double temperature;

  external ffi.Pointer<ffi.Char> additional_params_json;
}
